# Innotter

./: .env.dev  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  readme.md  requirements.txt
innotter/: asgi.py  celery.py  enum.py  producer.py  services.py  settings.py  urls.py  wsgi.py
innotter-front/: Dockerfile  package-lock.json  package.json
innotter-front/public/: index.html
innotter-front/src/: App.tsx  index.scss  index.tsx
innotter/tests/: test_services.py
microservice/: Dockerfile  consumer.py  enum.py  main.py  pyproject.toml  router.py  services.py
microservice/tests/: test_dynamodb.py
page/: api.py  models.py  permissions.py  producer.py  serializers.py  services.py  tests.py  urls.py
page/migrations/: 0001_initial.py  0002_page_owner.py  0003_page_follow_requests_page_followers_page_image_and_more.py  0004_delete_tag_alter_page_tags.py  0005_alter_page_tags.py  0006_pagemanager.py  0007_delete_pagemanager.py  0008_alter_page_uuid.py  0009_alter_page_uuid.py  0010_alter_page_followers.py  0011_alter_page_uuid.py  0012_alter_page_uuid.py  0013_page_is_blocked_alter_page_follow_requests.py  0014_alter_page_follow_requests_alter_page_followers.py  0015_alter_page_follow_requests_alter_page_followers.py  0016_alter_page_follow_requests_alter_page_followers.py  0017_alter_page_image.py
page/tests/: factories.py  test_services.py
post/: api.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py
post/migrations/: 0001_initial.py  0002_post_reply_to.py  0003_post_liked_by.py
post/tests/: factories.py  test_services.py
tag/: api.py  models.py  serializers.py  services.py
tag/migrations/: 0001_initial.py
tag/tests/: test_services.py
user/: api.py  authentication.py  backends.py  enum.py  exceptions.py  manager.py  models.py  permissioms.py  renderers.py  serializers.py  services.py  urls.py  utils.py
user/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_remove_user_image_s3_path_remove_user_is_blocked_and_more.py  0004_alter_user_managers_alter_user_email.py  0005_user_image_s3_path_user_is_blocked_user_role_and_more.py  0006_alter_user_title.py  0007_alter_user_role.py  0008_rename_image_s3_path_user_image.py
user/tests/: factories.py  test_services.py
(+9 files in other folders)
