[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["…"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
load-dotenv = "^0.1.0"
psycopg2 = "^2.9.5"
djangorestframework = "^3.14.0"
pyjwt = "^2.6.0"
boto3 = "^1.26.25"
celery = "^5.2.7"
rabbitmq = "^0.2.0"
pika = "^1.3.1"
logger = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
