[tool.poetry]
name = "microservice"
version = "0.1.0"
description = ""
authors = ["…"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
boto3 = "^1.26.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
